More attempts to fix PDF not working in dev and scroll bar offscreen

--- a/projects/static/projects/critical.css
+++ b/projects/static/projects/critical.css
@@ -117,6 +117,7 @@ button {
 
 img, iframe, video {
 	max-width: 90%;
+	max-height: 80vh;
 	/* Override width and height, which is set by lazy_srcset for images and manually for iframes and videos. 
 		 This lets image fit on screen .
 		 https://stackoverflow.com/a/17183996 */
@@ -127,5 +128,6 @@ img, iframe, video {
 html {
 	background-image: linear-gradient(transparent 0,rgba(240,128,128,.5) 100%);
 	color-scheme: light;
-	min-height: 100vh
+	min-height: 100vh;
+	max-width: 100vw;
 }
